--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,21 @@
+admin:
+    resource:   '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix:     /admin
+
+_sonata_admin:
+    resource:   .
+    type:       sonata_admin
+    prefix:     /admin
+
 api:
     type:       rest
     prefix:     /api/v1
     resource:   '@ApiBundle/Resources/config/routes.yml'
 
-fos_user_security:
-    resource: '@FOSUserBundle/Resources/config/routing/security.xml'
-    prefix: /api/v1
-
-NelmioApiDocBundle:
+api_doc:
     resource:   '@NelmioApiDocBundle/Resources/config/routing.yml'
     prefix:     /api/v1/doc
+
+fos_user_security:
+    resource:   '@FOSUserBundle/Resources/config/routing/security.xml'
+    prefix:     /api/v1
