--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,8 @@
         "nelmio/api-doc-bundle": "^2.13",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "sonata-project/admin-bundle": "^3.31",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.4",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
