--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
-    app.search:
-        class: AppBundle\Service\SearchService
-        arguments: ["@fos_elastica.finder.example.post"]
+    admin.post:
+        class: AppBundle\Admin\PostAdmin
+        arguments: [~, AppBundle\Entity\Post, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Post }
+        public: true
