feat(security): integrate sonata user bundle

--- a/app/config/sonata.yml
+++ b/app/config/sonata.yml
@@ -1,3 +1,7 @@
+sonata_user:
+    security_acl: true
+    manager_type: orm # can be orm or mongodb
+
 sonata_block:
     blocks:
         # enable the SonataAdminBundle block
