--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -56,11 +56,19 @@ doctrine:
         #   2. Uncomment database_path in parameters.yml.dist
         #   3. Uncomment next line:
         #path: '%database_path%'
+        types:
+            json: Sonata\Doctrine\Types\JsonType
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+#        naming_strategy: doctrine.orm.naming_strategy.underscore
+#        auto_mapping: true
+        entity_managers:
+            default:
+                mappings:
+                    SonataUserBundle: ~
+                    FOSUserBundle: ~
+                    AppBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -73,9 +81,14 @@ swiftmailer:
 nelmio_api_doc: ~
 
 fos_user:
-    db_driver: orm
-    firewall_name: main
-    user_class: UserBundle\Entity\User
+    db_driver:      orm # can be orm or odm
+    firewall_name:  main
+    user_class:     AppBundle\Entity\User
+    group:
+        group_class:   Sonata\UserBundle\Entity\BaseGroup
+        group_manager: sonata.user.orm.group_manager # If you're using doctrine orm (use sonata.user.mongodb.group_manager for mongodb)
+    service:
+        user_manager: sonata.user.orm.user_manager
     from_email:
-        address: '%mailer_user%'
-        sender_name: '%mailer_user%'
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
