--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "autoload": {
         "psr-4": {
             "ApiBundle\\": "src/ApiBundle",
-            "AppBundle\\": "src/AppBundle",
-            "UserBundle\\": "src/UserBundle"
+            "AppBundle\\": "src/AppBundle"
         },
         "classmap": [
             "app/AppKernel.php",
@@ -35,6 +34,7 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "sonata-project/admin-bundle": "^3.31",
         "sonata-project/doctrine-orm-admin-bundle": "^3.4",
+        "sonata-project/user-bundle": "^4.1",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
