--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -15,6 +15,10 @@ sonata_user_admin_resetting:
     resource:   '@SonataUserBundle/Resources/config/routing/admin_resetting.xml'
     prefix:     /admin/resetting
 
+default:
+    resource:   '@AppBundle/Controller/DefaultController.php'
+    type:       annotation
+
 api:
     type:       rest
     prefix:     /api/v1
