--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "4.0.0-alpha.6",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "node-sass": "^4.7.2",
+    "reactstrap": "^5.0.0-beta",
     "sass-loader": "^6.0.6"
   }
 }
