feat(media): integrate sonata media bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,8 @@ doctrine:
             default:
                 mappings:
                     SonataUserBundle: ~
+                    SonataMediaBundle: ~
+                    ApplicationSonataMediaBundle: ~
                     FOSUserBundle: ~
                     AppBundle: ~
 
