--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "autoload": {
         "psr-4": {
             "ApiBundle\\": "src/ApiBundle",
-            "AppBundle\\": "src/AppBundle"
+            "AppBundle\\": "src/AppBundle",
+            "Application\\Sonata\\MediaBundle\\": "src/Application/Sonata/MediaBundle"
         },
         "classmap": [
             "app/AppKernel.php",
@@ -34,6 +35,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "sonata-project/admin-bundle": "^3.31",
         "sonata-project/doctrine-orm-admin-bundle": "^3.4",
+        "sonata-project/easy-extends-bundle": "^2.5",
+        "sonata-project/media-bundle": "^3.11",
         "sonata-project/user-bundle": "^4.1",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
