--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "sonata-project/easy-extends-bundle": "^2.5",
         "sonata-project/media-bundle": "^3.11",
         "sonata-project/user-bundle": "^4.1",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
