refactor(entities): remove leftovers

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -106,3 +106,11 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     '%wkhtmltopdf_executable%'
+        options:
+            - { name: 'viewport-size', value: ‘1024x768’ }
+            - { name: 'page-size', value: 'A4' }
