--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -7,5 +7,5 @@ services:
 
     admin_success_handler:
         public: true
-        class: AppBundle\Services\AuthenticationHandler
+        class: AppBundle\Service\AuthenticationHandler
         arguments: [ '@service_container' ]
