--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "friendsofsymfony/user-bundle": "^2.0",
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.0",
+        "knplabs/knp-snappy-bundle": "^1.5",
         "nelmio/api-doc-bundle": "^2.13",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
