--- a/src/AppBundle/DataFixtures/ORM/Dev/product.yml
+++ b/src/AppBundle/DataFixtures/ORM/Dev/product.yml
@@ -1,24 +1,28 @@
 AppBundle\Entity\Product:
     product_ring-{1..25}:
         name: <word()>
+        shortDescription: <sentence()>
         description: <sentence()>
         category: '@category-ring'
         productImages: '<numberBetween(1, 10)>x @product_image-*'
 
     product_earring-{1..25}:
         name: <word()>
+        shortDescription: <sentence()>
         description: <sentence()>
         category: '@category-earring'
         productImages: '<numberBetween(1, 10)>x @product_image-*'
 
     product_bangle-{1..25}:
         name: <word()>
+        shortDescription: <sentence()>
         description: <sentence()>
         category: '@category-bangle'
         productImages: '<numberBetween(1, 10)>x @product_image-*'
 
     product_pendant-{1..25}:
         name: <word()>
+        shortDescription: <sentence()>
         description: <sentence()>
         category: '@category-pendant'
         productImages: '<numberBetween(1, 10)>x @product_image-*'
