--- a/deploy.php.dist
+++ b/deploy.php.dist
@@ -5,7 +5,7 @@ namespace Deployer;
 require __DIR__ . '/vendor/deployer/deployer/recipe/symfony3.php';
 
 set('application', 'binkevich'); // Project name
-set('http_user', 'apache');
+set('http_user', 'www-data');
 set('db', [
     'local' => [
         'name' => 'binkevich',
@@ -25,7 +25,7 @@ set('local_project_folder', '/path/to/binkevich'); // In order to use database:c
 host('production')
     ->hostname(get('db')['production']['host'])
     ->stage('production')
-    ->user('-USER-')
+    ->user('-USERNAME-')
     ->identityFile('~/.ssh/id_rsa')
     ->multiplexing(true)
     ->set('repository', 'https://github.com/denrolya/binkevich.git')
@@ -34,8 +34,8 @@ host('production')
     ->set('symfony_env', 'dev')
     ->set('composer_options', 'install --verbose --prefer-dist --no-progress --no-interaction --optimize-autoloader')
     ->set('deploy_path', '/var/www/{{application}}')
-    ->set('writable_mode', 'chmod')
-    ->set('shared_dirs', ['var/logs', 'var/jwt', 'var/sessions']);
+    ->set('writable_mode', 'acl')
+    ->set('shared_dirs', ['web/uploads', 'var/logs', 'var/jwt', 'var/sessions']);
 
 task('database:copy:to_local', function() {
     $dumpFilename = 'dump-' . time() . '.sql';
@@ -46,7 +46,7 @@ task('database:copy:to_local', function() {
     runLocally("mysqldump -h {$remoteDb['host']} -u {$remoteDb['username']} -p{$remoteDb['password']} {$remoteDb['name']} > ./$dumpFilename");
 
     writeln('<info>Dump success. Exporting dump into local database.</info>');
-    runLocally("mysql -u {$localDb['username']} -{$localDb['password']} {$localDb['name']} < ./$dumpFilename");
+    runLocally("mysql -u {$localDb['username']} -p{$localDb['password']} {$localDb['name']} < ./$dumpFilename");
     writeln('<info>Successfully exported! Removing leftover files...</info>');
     runLocally("rm ./$dumpFilename");
 
@@ -86,7 +86,9 @@ task('deploy', [
     'deploy:shared',
     'deploy:assets',
     'deploy:vendors',
+    'deploy:frontend:vendors',
     'deploy:assets:install',
+    'deploy:assets:compile',
     'deploy:assetic:dump',
     'deploy:cache:clear',
     'deploy:cache:warmup',
@@ -96,7 +98,8 @@ task('deploy', [
     'cleanup',
 ])->desc('Deploy backend application');
 
-task('deploy:frontend:vendors','yarn install')->desc('Install frontend dependencies');
+task('deploy:frontend:vendors','yarn install --ignore-engines')->desc('Install frontend dependencies');
+task('deploy:assets:compile', 'yarn run encore production');
 
 after('deploy:failed', 'deploy:unlock');
 after('deploy', 'success');
