refactor(routing): dynamically fetch categories on product listing page; use routing in headers

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,6 +26,8 @@ media:
 default:
     resource:   '@AppBundle/Controller/DefaultController.php'
     type:       annotation
+    options:
+      expose: true
 
 order:
     resource:   '@AppBundle/Controller/OrderController.php'
