--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.18.0",
     "create-react-class": "^15.6.3",
     "node-sass": "^4.7.2",
+    "react-files": "^2.4.6",
+    "react-toastr": "^3.0.0",
     "reactstrap": "^5.0.0",
     "sass-loader": "^6.0.6"
   }
