--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.0",
         "knplabs/knp-snappy-bundle": "^1.5",
+        "liplex/multiple-file-upload-bundle": "^1.2",
         "nelmio/api-doc-bundle": "^2.13",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
