refactor(order file): organize order file upload

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,6 +23,6 @@ parameters:
     router.request_context.scheme: https
     router.request_context.base_url: my/path
 
-    files_dir: '%kernel.root_dir%/../web/uploads/orders'
+    order_files_dir: '%kernel.root_dir%/../web/uploads/orders'
 
     wkhtmltopdf_executable: '/usr/local/bin/wkhtmltopdf'
