--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     app.admin.listener.serialization-listener:
-        class: AppBundle\Listener\Serialization\SerializationListener
+        class: AppBundle\EventListener\SerializationListener
         tags:
             - { name: jms_serializer.event_subscriber, event: serializer.post_serialize, method: onPostSerialize }
         public: true
