--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,7 +34,7 @@ security:
                 use_forward:    false
                 check_path:     /admin/login_check
                 failure_path:   null
-                success_handler: admin_success_handler
+                success_handler: AppBundle\Service\AuthenticationHandler
             logout:
                 path:           /admin/logout
                 target:         /admin/login
