--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,6 +79,13 @@ doctrine:
                     FOSUserBundle: ~
                     AppBundle: ~
 
+assetic:
+    debug:          "%kernel.debug%"
+    use_controller: false
+    bundles:        [ AppBundle ]
+    filters:
+        cssrewrite: ~
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: '%mailer_transport%'
