--- a/app/config/sonata.yml
+++ b/app/config/sonata.yml
@@ -17,7 +17,7 @@ sonata_admin:
                 position: left
                 type: sonata.admin.block.admin_list
                 settings:
-                    groups: [Products, 'Index Page Carousels']
+                    groups: [Products]
             -
                 position: right
                 type: sonata.admin.block.admin_list
@@ -27,7 +27,12 @@ sonata_admin:
         groups:
             'Index Page Carousels':
                 items:
-                    - app.admin.carousel
+                    - route:        admin_app_indexpagecarousel_edit
+                      route_params: { id: 1 }
+                      label:        Lookbook
+                    - route:        admin_app_indexpagecarousel_edit
+                      route_params: { id: 2 }
+                      label:        Bespoke
             Products:
                 items:
                     - app.admin.category
