--- a/deploy.php.dist
+++ b/deploy.php.dist
@@ -29,7 +29,7 @@ host('production')
     ->identityFile('~/.ssh/id_rsa')
     ->multiplexing(true)
     ->set('repository', 'https://github.com/denrolya/binkevich.git')
-    ->set('branch', 'develop')
+    ->set('branch', 'master')
     ->set('clear_paths', [])
     ->set('symfony_env', 'dev')
     ->set('composer_options', 'install --verbose --prefer-dist --no-progress --no-interaction --optimize-autoloader')
@@ -38,9 +38,10 @@ host('production')
     ->set('shared_dirs', ['web/uploads', 'var/logs', 'var/jwt', 'var/sessions']);
 
 task('database:copy:to_local', function() {
-    $dumpFilename = 'dump-' . time() . '.sql';
-    $remoteDb = get('db')[input()->getArgument('stage')];
+    $stage = input()->getArgument('stage');
+    $remoteDb = get('db')[$stage];
     $localDb = get('db')['local'];
+    $dumpFilename = 'dump-' . time() . '.sql';
 
     writeln('<info>Dumping database from remote host.</info>');
     runLocally("mysqldump -h {$remoteDb['host']} -u {$remoteDb['username']} -p{$remoteDb['password']} {$remoteDb['name']} > ./$dumpFilename");
